{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 25,
  "lineage": "013331ee-6abd-ac57-4bc3-e431ea812fba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06189e1b91d3bdced",
            "domain": "vpc",
            "id": "eipalloc-09a2761967b4432a2",
            "network_interface": "eni-036b3782286049744",
            "private_dns": "ip-10-1-0-108.us-west-2.compute.internal",
            "private_ip": "10.1.0.108",
            "public_dns": "ec2-54-200-219-55.us-west-2.compute.amazonaws.com",
            "public_ip": "54.200.219.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sam-code-test",
              "project": "sam-code-test"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:internet-gateway/igw-003b43c28116fa2b2",
            "id": "igw-003b43c28116fa2b2",
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a2761967b4432a2",
            "id": "nat-0ff7f3e80b65c93e0",
            "network_interface_id": "eni-036b3782286049744",
            "private_ip": "10.1.0.108",
            "public_ip": "54.200.219.55",
            "subnet_id": "subnet-03bdf3de6b6bc79a8",
            "tags": {
              "Name": "sam-code-test",
              "project": "sam-code-test"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07970c5fd7eca476d",
            "owner_id": "207188242297",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ff7f3e80b65c93e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.current",
            "aws_eip.nat_eip",
            "aws_internet_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0864a7b61f3ad63a0",
            "owner_id": "207188242297",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003b43c28116fa2b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0384c54fc5440cad9",
            "route_table_id": "rtb-07970c5fd7eca476d",
            "subnet_id": "subnet-03bdf3de6b6bc79a8"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fb356bce3c33d39",
            "route_table_id": "rtb-07970c5fd7eca476d",
            "subnet_id": "subnet-009c906bb4d4d93ba"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcc9f33de1a7f49d",
            "route_table_id": "rtb-07970c5fd7eca476d",
            "subnet_id": "subnet-0f52895f97d9cabf5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.current",
            "aws_eip.nat_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04633d472f1039022",
            "route_table_id": "rtb-0864a7b61f3ad63a0",
            "subnet_id": "subnet-0a581e13c3725f430"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0466191197942a6ac",
            "route_table_id": "rtb-0864a7b61f3ad63a0",
            "subnet_id": "subnet-0729d48235cb14bec"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045926a52b531d9fe",
            "route_table_id": "rtb-0864a7b61f3ad63a0",
            "subnet_id": "subnet-001f658df0c39bb0a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:subnet/subnet-03bdf3de6b6bc79a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-03bdf3de6b6bc79a8",
            "map_public_ip_on_launch": false,
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test-private-0",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:subnet/subnet-009c906bb4d4d93ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-009c906bb4d4d93ba",
            "map_public_ip_on_launch": false,
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test-private-1",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:subnet/subnet-0f52895f97d9cabf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0f52895f97d9cabf5",
            "map_public_ip_on_launch": false,
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test-private-2",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:subnet/subnet-0a581e13c3725f430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0a581e13c3725f430",
            "map_public_ip_on_launch": false,
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test-public-0",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:subnet/subnet-0729d48235cb14bec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0729d48235cb14bec",
            "map_public_ip_on_launch": false,
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test-public-1",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:subnet/subnet-001f658df0c39bb0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-001f658df0c39bb0a",
            "map_public_ip_on_launch": false,
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test-public-2",
              "project": "sam-code-test"
            },
            "vpc_id": "vpc-0f202575e4dc76c4d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:207188242297:vpc/vpc-0f202575e4dc76c4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0658ebddccdd9750c",
            "default_route_table_id": "rtb-0ed046e71ddcdac27",
            "default_security_group_id": "sg-023701989bd377916",
            "dhcp_options_id": "dopt-15889b77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f202575e4dc76c4d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed046e71ddcdac27",
            "owner_id": "207188242297",
            "tags": {
              "Name": "sam-code-test",
              "project": "sam-code-test"
            }
          }
        }
      ]
    }
  ]
}